--- a/Sass/method.scss
+++ b/Sass/method.scss
@@ -320,6 +320,383 @@ main {
       }
     }
   }
+  .report-section {
+    padding: 35px 0 110px;
+    background: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18850-1-1.png") no-repeat;
+    background-size: cover;
+
+    .report-container {
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+      .wrap__side {
+        padding-left: 100px;
+        padding-right: 10px;
+        width: 60%;
+        .box__content {
+          width: 100%;
+          height: fit-content;
+          margin-bottom: 30px;
+          h1 {
+            font-size: 40px;
+            line-height: 52px;
+            color: #fff;
+            text-align: start;
+          }
+        }
+        .wrap__dess {
+          width: 100%;
+          height: fit-content;
+          display: flex;
+          flex-wrap: wrap;
+          .item {
+            width: calc(50% - 20px);
+            background: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: start;
+            margin-right: 15px;
+            margin-bottom: 15px;
+            padding: 25px 24px 18px 36px;
+            box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.15);
+            border-radius: 10px;
+            .box__img {
+              width: 100%;
+            }
+            .content {
+              width: 100%;
+              p {
+                text-align: start;
+                font-size: 14px;
+                margin-bottom: 10px;
+                line-height: 26px;
+                font-weight: 300;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .schedule-section {
+    padding: 50px 0 140px;
+    .schedule-container {
+      display: flex;
+      align-items: center;
+      .schedule__side {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 60%;
+        position: relative;
+        .box__img {
+          width: 100%;
+        }
+        .box__content {
+          position: absolute;
+          top: 0;
+          text-align: center;
+          padding: 51px 82px 68px;
+          h3 {
+            font-size: 27px;
+            margin-bottom: 40px;
+          }
+
+          .time-text {
+            font-size: 30px;
+            margin-bottom: 30px;
+            color: #ed1c24;
+            line-height: 30px;
+            font-weight: 700;
+          }
+          .wrap__dess {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 30px;
+            .item + .item {
+              margin-left: 10px;
+            }
+            .item {
+              width: calc((100% / 3) - 20px);
+              padding: 10px;
+              background: #b11116;
+              border-radius: 5px;
+              color: #fff;
+              white-space: nowrap;
+              h4 {
+                font-size: 14px;
+                align-items: center;
+                font-weight: 400;
+                b {
+                  align-items: center;
+                  display: block;
+                }
+              }
+            }
+            .item:nth-child(1) {
+              background: #ed1c24;
+            }
+            .item:nth-child(2) {
+              background: #ce181e;
+            }
+          }
+          p {
+            font-size: 13px;
+          }
+        }
+      }
+      .img-side {
+        width: 40%;
+      }
+    }
+  }
+  .main__system {
+    width: 100%;
+    background-color: #f1f4f4 !important;
+    padding: 50px 100px;
+    .main__system__container {
+      padding-top: 45px;
+      h1 {
+        margin-bottom: 20px;
+      }
+      // :not(h1){
+      //   display: flex;
+      //   flex-direction: row;
+      // }
+      h1 {
+        text-align: center;
+      }
+
+      .box__system {
+        display: flex;
+        background-color: #fff;
+        border-radius: 50px;
+        overflow: hidden;
+        // h1{
+        //   text-align: center;
+        // }
+        // :not(h1){
+        //   flex-direction: row;
+        // }
+        .info__nav {
+          display: flex;
+          flex-wrap: wrap;
+          flex-direction: column;
+          gap: 20px;
+          padding-top: 16px;
+          background-color: #fff;
+          // border: solid 1px red;
+
+          .box__select {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+
+            select {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              border: solid 1px #686876;
+              border-radius: 60px;
+              color: #686876;
+              padding: 13px 50px 13px 47px;
+            }
+          }
+          .result__container__all::-webkit-scrollbar {
+            width: 5px;
+          }
+
+          .result__container__all::-webkit-scrollbar-thumb {
+            background: red;
+          }
+          .result__container__all {
+            display: flex;
+            flex-direction: column;
+            overflow-y: scroll;
+            height: 495px;
+
+            gap: 12px;
+
+            .result__container {
+              display: flex;
+              flex-direction: column;
+              // font-size: 10px;
+              border-radius: 10px;
+              border: solid 1px #c3c3c3ab;
+              height: 100%;
+              width: 100%;
+              position: relative;
+              padding: 25px 77px 25px 27px;
+              // align-self: flex-start;
+
+              .result__box {
+                gap: 25px;
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: column;
+                position: relative;
+                // width: 100%;
+                // height: 25%;
+                // text-align: justify;
+
+                .location {
+                  display: flex;
+                  align-items: center;
+                  gap: 10px;
+                }
+                .phone {
+                  display: flex;
+                  align-items: center;
+                  gap: 10px;
+                }
+                .map__view {
+                  display: flex;
+                  align-items: center;
+                  gap: 10px;
+                  border: solid 1px red;
+                  border-radius: 60px;
+                  text-align: center;
+                  justify-content: center;
+                  width: 169px;
+                  height: 35px;
+                  color: red;
+                }
+                .arrow__btn {
+                  position: absolute;
+                  display: flex;
+                  border: solid 1px #686876;
+                  width: 40px;
+                  height: 40px;
+                  border-radius: 50%;
+                  align-items: center;
+                  justify-content: center;
+                  right: -60px;
+                  top: 90px;
+                  color: #686876;
+                }
+              }
+            }
+            .result__container:hover {
+              cursor: pointer;
+              box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
+              -webkit-box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
+              -moz-box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+.teachingSkill-section {
+  padding: 70px 0 100px;
+  .teachingSkill-container {
+    .box__content {
+    }
+    .box__carousel {
+      height: 500px;
+      .slick-pre,
+      .slick-next {
+        position: absolute;
+        top: 210px;
+        border: none;
+        outline: none;
+        color: red;
+        background: #fff;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        z-index: 10000;
+        font-weight: 1000;
+        font-size: 1em;
+        box-shadow: 0px 10px 20px rgba(9, 47, 70, 0.1);
+      }
+      .slick-pre {
+        left: -5%;
+      }
+      .slick-next {
+        right: -5%;
+      }
+      .slick-list {
+        overflow-y: visible;
+        height: 100%;
+        .slick-track {
+          height: 100%;
+          overflow-y: visible;
+          .item + .item {
+            margin-left: 30px;
+          }
+          .item {
+            position: relative;
+            background: #ffffff;
+            box-shadow: 0px 3.20662px 40.0827px rgba(88, 88, 88, 0.3);
+            border-radius: 10px;
+            padding: 45px 26px 50px;
+            height: fit-content;
+            transform: translateY(50px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            .content {
+              width: 100%;
+              h2 {
+                font-size: 20px;
+                height: 120px;
+                margin: 0;
+              }
+            }
+            .box__img {
+              width: 100%;
+              height: 180px;
+            }
+            .wrap__desc {
+              position: absolute;
+              display: none;
+              height: 10px;
+              transition: var(--animiation);
+              h1 {
+                font-size: 25px;
+                color: #ffffff;
+                margin-bottom: 20px;
+                font-weight: 1000;
+              }
+              p {
+                font-size: 13px;
+                color: #ffffffbd;
+                line-height: 1.5;
+                margin-bottom: 29px;
+                overflow: hidden;
+              }
+            }
+          }
+          .slick-current > .wrap__desc {
+            background-image: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18854-1-1.png");
+            height: 430px;
+            left: 0;
+            top: 0;
+            transform: translateY(-15px);
+            display: block;
+            padding: 35px;
+            border-radius: 10px;
+            transition: var(--animiation);
+          }
+          .slick-current > .content,
+          .slick-current > .box__img {
+            opacity: 0;
+          }
+          .slick-current {
+            background: transparent;
+            box-shadow: none;
+          }
+        }
+      }
+    }
+  }
 }
 @media only screen and (max-width: 1023px) {
   main {
@@ -375,6 +752,7 @@ main {
       }
     }
     .route-section {
+      margin-bottom: 50px;
       .route-container {
         .route__content {
           h1 {
@@ -404,7 +782,51 @@ main {
         }
       }
     }
+    .report-section {
+      .report-container {
+        .wrap__side {
+          width: 70%;
+        }
+      }
+    }
+    .schedule-section {
+      padding: 50px 0 140px;
+      .schedule-container {
+        flex-direction: column;
+        .schedule__side {
+          width: 70%;
+          .box__content {
+            width: 100%;
+            padding: 71px 43px 55px;
+            h3 {
+              font-size: 25px;
+              margin-bottom: 20px;
+            }
+
+            .time-text {
+              font-size: 23px;
+              margin-bottom: 20px;
+              line-height: 1.3;
+            }
+            .wrap__dess {
+            }
+          }
+        }
+        .img-side {
+          width: 40%;
+        }
+      }
+    }
+    .main__system {
+      .box__system {
+        flex-direction: column !important;
+        justify-content: center;
+        align-items: center;
+      }
+    }
   }
+}
+@media only screen and (max-width: 900px) {
 }
 @media only screen and (max-width: 767px) {
   main {
@@ -467,6 +889,75 @@ main {
             }
             h4 {
               font-size: 20px;
+            }
+          }
+        }
+      }
+    }
+    .report-section {
+      .report-container {
+        .wrap__side {
+          padding-left: 0px;
+          padding-right: 0px;
+          width: 100%;
+          .box__content {
+            h1 {
+              font-size: 26px;
+              line-height: 1.3;
+            }
+          }
+          .wrap__dess {
+            gap: 10px;
+            justify-content: space-between;
+            .item {
+              width: calc(50% - 10px);
+              margin: 0;
+            }
+          }
+        }
+      }
+    }
+    .schedule-section {
+      padding: 50px 0 140px;
+      .schedule-container {
+        flex-direction: column;
+        .schedule__side {
+          width: 100%;
+          overflow: hidden;
+
+          .box__content {
+            padding: 91px 80px 55px;
+            h3 {
+              font-size: 23px;
+              margin-bottom: 20px;
+            }
+
+            .time-text {
+              font-size: 20px;
+              margin-bottom: 20px;
+              line-height: 1.3;
+            }
+            .wrap__dess {
+            }
+          }
+        }
+        .img-side {
+          width: 40%;
+        }
+      }
+    }
+    .main__system {
+      padding: 0;
+      .box__system {
+        border-radius: 0 !important;
+        .info__nav {
+          .box__select {
+            gap: 5px;
+            .box__city,
+            .box__distr {
+              select {
+                padding: 10px 10px 13px 10px;
+              }
             }
           }
         }
