--- a/css/homepage.css
+++ b/css/homepage.css
@@ -13,7 +13,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 body {
-  font-family: Roboto, sans-serif;
+  font-family: gilroyMedium;
   letter-spacing: 0.01em;
   scroll-behavior: smooth;
 }
@@ -27,8 +27,13 @@ body img {
   object-fit: contain;
   max-width: 100%;
 }
-body h1 {
+body h1,
+body h2 {
+  font-family: headerfont;
   text-transform: uppercase;
+  background: var(--gradient-color);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 * {
@@ -503,7 +508,7 @@ main .thinkAbout__section .slick-next {
   border: none;
   outline: none;
   color: red;
-  background: #fff;
+  background: var(--gradient-color);
   width: 50px;
   height: 50px;
   border-radius: 50%;
