--- a/css/program.css
+++ b/css/program.css
@@ -8,8 +8,7 @@
 img {
   max-width: 100%;
   height: auto;
-  -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
 
 .grid__container .site__content .banner .banner__wrap img {
@@ -31,8 +30,7 @@ img {
 }
 .grid__container .site__content .overview .overview__wrap .box__img img {
   width: 100%;
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
+  object-fit: scale-down;
 }
 .grid__container .site__content .overview .overview__wrap .box__text {
   padding-top: 15%;
@@ -80,16 +78,16 @@ img {
 .grid__container .site__content .advantage .ad__container .ad__wrap .ad__item {
   background: rgb(2, 0, 36);
   background: linear-gradient(49.28deg, #ffffff 20.28%, #bbbbbb 33.45%, #bbbbbb 44.87%, #7c7c7c 58.92%, #ffffff 80.87%, #7c7c7c 93.17%, #ffffff 104.58%);
-  width: 310px;
-  height: 410px;
+  width: 330px;
+  height: 430px;
   border-radius: 22px;
 }
 .grid__container .site__content .advantage .ad__container .ad__wrap .ad__item .ad__item__wrap {
   left: 5px;
   top: 5px;
   position: relative;
-  width: 300px;
-  height: 400px;
+  width: 340px;
+  height: 440px;
   background: #b11116;
   border-radius: 22px;
   padding: 50px 24px 24px;
@@ -101,7 +99,7 @@ img {
   margin-bottom: 20px;
 }
 .grid__container .site__content .advantage .ad__container .ad__wrap .ad__item .ad__item__wrap p {
-  text-align: center;
+  text-align: left;
   color: #fff;
   font-size: 1.15rem;
 }
@@ -154,8 +152,7 @@ img {
   right: 5%;
   position: absolute;
   width: 90%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .grid__container .site__content .duration {
   background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18890-1.png);
@@ -443,8 +440,7 @@ img {
     gap: 20px;
   }
   .grid__container .site__content .overview .overview__wrap .box__img img {
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
   .grid__container .site__content .overview .overview__wrap .box__text h2 {
     font-size: 2rem;
@@ -476,8 +472,7 @@ img {
     gap: 0;
   }
   .grid__container .site__content .overview .overview__wrap .box__img img {
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
   .grid__container .site__content .overview .overview__wrap .box__text {
     padding-top: 0;
@@ -507,10 +502,11 @@ img {
     gap: 40px;
   }
   .grid__container .site__content .advantage .ad__container .ad__wrap .ad__item {
-    height: 360px;
+    height: 390px;
+    width: 350px;
   }
   .grid__container .site__content .advantage .ad__container .ad__wrap .ad__item .ad__item__wrap {
-    height: 350px;
+    height: 380px;
   }
   .grid__container .site__content .method .method__container {
     padding: 80px 30px 232px 60px;
@@ -583,8 +579,7 @@ img {
     gap: 0;
   }
   .grid__container .site__content .overview .overview__wrap .box__img img {
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
   .grid__container .site__content .overview .overview__wrap .box__text {
     padding-top: 0;
