--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
     rgba(19, 145, 94, 1) 75%,
     rgba(22, 105, 98, 1) 100%
   );
-  --primary-color: #007bff; /* Primary color */
+  --primary-color: #167f82;
   --secondary-color: #6c757d; /* Secondary color */
   --success-color: #28a745; /* Success color */
   --info-color: #17a2b8; /* Info color */
