--- a/Sass/register.scss
+++ b/Sass/register.scss
@@ -52,6 +52,10 @@
           outline: none;
           border: none;
           border: 1px white solid;
+          option {
+            background-color: #fff;
+            color: #121212;
+          }
         }
       }
       input {
