--- a/css/register.css
+++ b/css/register.css
@@ -57,6 +57,10 @@
   border: none;
   border: 1px white solid;
 }
+.register--form--listInput .style-custom select option {
+  background-color: #fff;
+  color: #121212;
+}
 .register--form--listInput input {
   background-color: #f04950;
   width: calc(20% - 10px);
