--- a/css/homepage.css
+++ b/css/homepage.css
@@ -13,7 +13,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 body {
-  font-family: gilroyMedium;
+  font-family: Roboto, sans-serif;
   letter-spacing: 0.01em;
   scroll-behavior: smooth;
 }
@@ -27,13 +27,8 @@ body img {
   object-fit: contain;
   max-width: 100%;
 }
-body h1,
-body h2 {
-  font-family: headerfont;
+body h1 {
   text-transform: uppercase;
-  background: var(--gradient-color);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 * {
@@ -508,7 +503,7 @@ main .thinkAbout__section .slick-next {
   border: none;
   outline: none;
   color: red;
-  background: var(--gradient-color);
+  background: #fff;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -764,6 +759,16 @@ main .system-section .box__content-right .box__items .item .counter {
   }
   to {
     transform: translateY(0);
+  }
+}
+@keyframes movedown {
+  from {
+    transform: translateY(70px);
+  }
+  to {
+    transform: translateY(0);
+  }
+}/*# sourceMappingURL=homepage.css.map */
   }
 }
 @keyframes movedown {
